add gen_indentify to examples

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -116,6 +116,7 @@ versions : (
 # any entry is a copule of <key, vealue>. For example, MAC address, serial number,
 # and so on.
 identify : (
+    @include "/run/swuid.cfg"
 	{ name = "versionSpC"; value = "1.0"; },
 	{ name = "hwId"; value = "ipse"; },
 	{ name = "hwVersion"; value = "333"; },
@@ -176,6 +177,9 @@ identify : (
 #			  Specify server connection timeout. If no connection has been established in this
 #			  period, libcurl will consider connection unsuccessful.
 #			  Default value is determined by underlying libcurl implementation (300s).
+# updatecmd     : string
+#             runtime update indentify file to identify : ( @include "/run/swuid.cfg");
+#
 
 suricatta :
 {
@@ -192,6 +196,7 @@ suricatta :
 	enable		= true;
 	initial-report-resend-period = 30;
 	connection-timeout = 10;
+    updatecmd   = "/etc/swupdate/gen_indentify.sh"
 /*
 	cafile		= "/etc/ssl/cafile";
 	sslkey		= "/etc/ssl/sslkey";
